--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body{
   overflow: auto;
   min-height: 300px;
   border: 2px solid chartreuse;
-  padding: 38px;
+  padding: 38px 38px;
   border-radius: 10px;
 }
 
@@ -20,4 +20,10 @@ body{
   color: white;
   text-align: center;
 
+}
+
+@media only screen and (max-width: 400px) {
+  .container{
+    padding: 38px 10px;
+  }
 }
