--- a/src/components/AddTask.css
+++ b/src/components/AddTask.css
@@ -20,3 +20,9 @@
     margin-left: 10px;
     flex: 1;
 }
+
+@media only screen and (max-width: 400px) {
+    .add-task-input{
+        width: 100px;
+    }
+}
