--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -30,3 +30,11 @@
     display: flex;
     justify-content: flex-end;
 }
+
+
+@media only screen and (max-width: 400px) {
+    .task-title{
+        cursor: pointer;
+        font-size: 14px;
+    }
+}
